frontend/test/should_pass/typeof_model_001.gm
abstract node class Chunk;
abstract edge class chunkIn;
edge class equivTo;