frontend/test/should_fail/uniqueTestModelWithoutUniqueDeclarations.gm
// missing: node edge unique;
// missing: object class unique;
